[FIX] Large tables on mobile devices: the icon to toggle table formatting is missing

--- a/themes/base_files/scss/tiki_base.scss
+++ b/themes/base_files/scss/tiki_base.scss
@@ -72,6 +72,10 @@
     left: 0px;
     z-index: 1;
 }
+// Icon to toggle table formatting
+.toggle-table-wrap .btn {
+  font-family: 'Font Awesome 6 Free' !important;
+}
 
 
 /* End of file */
